2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Set common name in generated certificates.

	* libepc/tls.c: Set common name in generated certificates.

2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Change epc_test_init to take initial result mask as argument.

	* tests/framework.c, tests/framework.h, tests/*.c:
	Change epc_test_init to take initial result mask as argument.

2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Always dump the test cases' stdout and stderr when EPC_DEBUG is set.

	* tests/test-runner.sh: Consider EPC_DEBUG variable.

2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Pass arguments to make when building API documentation.

	* Makefile.am: Pass arguments to make when building API documentation.

2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Restart the DNS-SD dispatcher when changing the publisher's name.

	* libepc/publisher.c: Restart dispatcher on server-name change.
	* Makefile.am, tests/.gitignore: Add tests/test-publisher-change-name.c
	* tests/test-dispatcher-local-collision.c: Remove some G_GNUC_UNUSED
	* tests/test-publisher-change-name.c: Verify name changes are working.
	* tests/test-publisher-libsoup-494128.c: Add description.
	* tests/framework.c: Print message when tests pass.

2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Try to deal with libsoup bug #494128. Seems there is no way to force
	SoupServer to close all pending HTTP connections. So it seems we have
	to accept leaking the SoupServer on shutdown, as each HTTP connection
	increases the server's reference count. Well, but at least we can try
	not to add additional leaking references. That's what this changes
	try to achive.

	* libepc/publisher.c: Try to deal with libsoup bug #494128
	* tests/test-publisher-libsoup-494128.c: Test run/quit variants
	* Makefile.am, tests/.gitignore: Add test-publisher-libsoup-494128.c

2007-11-08  Mathias Hasselmann  <mathias@openismus.com>
